Require Java 21 for Nessie build (#9382)
Also bump Quarkus requirements to Java 21 + fix Java 21 deprecations